# frobnicate

haskell/: frobnicate.cabal
haskell/src/: Frobnicate.hs
